@@ -289,6 +289,15 @@ Skyscraper.SBS.Elevator.LevelingOffset = 0.5
 ;leveling door open offset value
 Skyscraper.SBS.Elevator.LevelingOpen = 0
 
+;enable random elevator traffic (experimental)
+Skyscraper.SBS.Elevator.RandomActivity = false
+
+;random traffic probability factor, starting at 1 (higher is less likely)
+Skyscraper.SBS.Elevator.RandomProbability = 10
+
+;random traffic selection frequency, in seconds
+Skyscraper.SBS.Elevator.RandomFrequency = 3
+
 
 ;
 ; SBS sound configuration
